# RubiksCubeSolverV1

./: CMakeLists.txt  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCube3dArray.h  RubiksCubeBitboard.cpp
PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h.cpp  DFSSolver.cpp  IDAstarSolver.h.cpp
